# prodigy-whisper

./: README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
prodigy_whisper/: __init__.py
tests/: test_smoke.py
