[metadata]
version = 0.2.0
description = Recipes for interacting with the Hugging Face ecosystem.
url = https://github.com/explosion/prodigy-ann
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    openai-whisper>=20231106

[options.entry_points]
prodigy_recipes =
    whisper.audio.transcribe = prodigy_whisper:whisper_audio_transcribe

[bdist_wheel]
universal = true

[sdist]
formats = gztar
